--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.19.0
-  firebase_auth: ^4.11.1
+  firebase_auth: ^4.12.0
   google_fonts: ^6.1.0
   flutter_native_splash: ^2.3.4
   get: ^4.6.5
   smooth_page_indicator: ^1.1.0
   liquid_swipe: ^3.1.0
   curved_navigation_bar: ^1.0.3
+  otp_text_field: ^1.1.3
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -50,16 +52,16 @@ dev_dependencies:
 
 flutter_native_splash:
   color: "#f7f6f1"
-  image: assets/images/LaCanastaLogo.png
+  branding: assets/images/LaCanastaLogoSplash.png
   color_dark: "#272727"
-  image_dark: assets/images/LaCanastaLogo.png
+  branding_dark: assets/images/LaCanastaLogoSplash.png
   web: false
 
   android_12:
     icon_background_color: "#f7f6f1"
-    image: assets/images/LaCanastaLogo.png
+    image: assets/images/LaCanastaLogoSplash.png
     icon_background_color_dark: "#272727"
-    image_dark: assets/images/LaCanastaLogo.png
+    image_dark: assets/images/LaCanastaLogoSplash.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,6 +73,7 @@ flutter:
     - assets/images/
     - assets/images/authentication_images/
     - assets/images/on_boarding_images/
+    - assets/images/home_images/
 
   fonts:
     - family: PublicPixel
