--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   # Use with the CupertinoIcons class for iOS style icons.
+  line_awesome_flutter: ^2.0.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.19.0
   firebase_auth: ^4.12.0
